--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 <div class="hero" >
     
-
+export default function HomePage() {
+  return (
     <div class="title bebas-neue-regular">
         <h1>MK's Sudoku</h1>
     </div>    
@@ -33,3 +34,4 @@
 
 </body>
 </html>
+  )}; 
